--- a/src/task-c/index.html
+++ b/src/task-c/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
     <head>
         <title>Calculator</title>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
         <meta charset="UTF-8">
         <meta name="author" content="Georgi Nikolov">
         <link rel="stylesheet" href="index.css">
